--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <strong id="chipSets">—</strong>
       </div>
       <div class="chip">
+        <span>Types</span>
+        <strong id="chipTypes">—</strong>
+      </div>
+      <div class="chip">
         <span>Erratum</span>
         <strong id="chipErrata">—</strong>
       </div>
@@ -121,6 +125,16 @@
           </div>
         </header>
         <canvas id="featureChart" height="220"></canvas>
+      </article>
+
+      <article class="panel chart-card">
+        <header>
+          <div>
+            <p class="eyebrow">Type</p>
+            <h3>Type distribution</h3>
+          </div>
+        </header>
+        <canvas id="typeChart" height="220"></canvas>
       </article>
 
       <article class="panel chart-card">
